<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_password">Password</string>
    <string name="title_username">Username</string>
    <string name="title_onboarding">In learning you will teach, and in teaching you will learn.</string>
    <string name="title_email">Email</string>
    <string name="err_email">Must input Email</string>
    <string name="title_login">Login</string>
    <string name="err_password">Length must be more than 8</string>
    <string name="inf_intro">Welcome Back</string>
    <string name="title_sign_up">Sign Up</string>
    <string name="title_authentication">Authentication</string>
    <string name="txt_password">Password</string>
    <string name="txt_email">Email</string>
</resources>